testing, fix z-index

--- a/src/styles/toc.scss
+++ b/src/styles/toc.scss
@@ -39,6 +39,6 @@
     bottom: 0;
     border-left: 1px solid var(--amplify-colors-neutral-20);
     padding: var(--amplify-space-medium);
-    z-index: 1;
+    z-index: 2;
   }
 }
